--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "mongoose": "^5.3.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -23,6 +27,7 @@
     "babel-loader": "^8.0.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
