--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "express-validation": "^1.0.2",
     "helmet": "^3.15.0",
-    "mongoose": "^5.3.11"
+    "joi": "^14.0.6",
+    "mongoose": "^5.3.11",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.5",
+    "@babel/runtime": "^7.1.5",
     "babel-loader": "^8.0.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
