--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "Shahadul Haider <shahadul.haider@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -w --mode=development",
+    "clean": "rimraf dist",
+    "build": "yarn run clean && webpack -w --mode=development",
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
@@ -19,6 +21,8 @@
     "helmet": "^3.15.0",
     "joi": "^14.0.6",
     "mongoose": "^5.3.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
+    "rimraf": "^2.6.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
