--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express-validation": "^1.0.2",
     "helmet": "^3.15.0",
     "joi": "^14.0.6",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "validator": "^10.9.0"
   },
