--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "joi": "^14.0.6",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
+    "mongoose-unique-validator": "^2.0.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "slug": "^0.9.2",
     "validator": "^10.9.0"
   },
   "devDependencies": {
