--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "express-validation": "^1.0.2",
     "helmet": "^3.15.0",
+    "http-status": "^1.2.0",
     "joi": "^14.0.6",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
