--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn run clean && webpack -w --mode=development",
-    "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js"
+    "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
+    "prettier" : "prettier --single-quote --print-width 80 --no-semi --trailing-comma all --write 'src/**/*.js'"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
@@ -44,6 +45,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
+    "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
